ui(zhaojing): add navigation links from dashboard and zhaojing page

--- a/index.html
+++ b/index.html
@@ -646,6 +646,11 @@ main>section:nth-child(5){animation-delay:.33s}
   <span class="group">核對資料</span>
   <a href="verify/" target="_blank">統一核對頁</a>
   <a href="data/zhaojing/tasks.json" target="_blank">原始 JSON: 兆鯨</a>
+  <span class="group">兆鯨物業</span>
+  <a href="zhaojing/tenants.html">租客名單</a>
+  <a href="zhaojing/property_ops.html">物業事件</a>
+  <a href="data/zhaojing/tenants.json" target="_blank">原始 JSON: 租客</a>
+  <a href="data/zhaojing/property_ops.json" target="_blank">原始 JSON: 物業事件</a>
   <a href="data/finance/tasks.json" target="_blank">原始 JSON: 理財</a>
   <a href="data/personal/tasks.json" target="_blank">原始 JSON: 個人</a>
   <a href="data/openclaw/tasks.json" target="_blank">原始 JSON: OpenClaw</a>
