--- a/zhaojing/property_ops.html
+++ b/zhaojing/property_ops.html
@@ -36,7 +36,7 @@ th,td{padding:10px 12px;border-bottom:1px solid var(--border);text-align:left;fo
 th{font-size:11px;letter-spacing:.6px;text-transform:uppercase;color:var(--muted);font-family:"JetBrains Mono",monospace;background:rgba(255,255,255,.03)}
 tr:hover td{background:rgba(255,255,255,.04)}
 .small{font-size:12px;color:var(--muted)}
-.pill{display:inline-block;padding:2px 8px;border-radius:999px;border:1px solid var(--border);font-size:12px;color:var(--dim)}
+.pill{display:inline-block;padding:1px 6px;border-radius:999px;border:1px solid var(--border);font-size:10px;color:var(--dim);white-space:nowrap}
 .pill.ok{border-color:#2A5030;color:var(--ok)}
 .pill.warn{border-color:var(--urgent-bd);color:var(--warn)}
 .pill.danger{border-color:#406888;color:var(--danger)}
