ui(zhaojing): unify nav links (same tab) + prevent tenant wrap

--- a/zhaojing/tenants.html
+++ b/zhaojing/tenants.html
@@ -60,9 +60,9 @@ footer{margin-top:12px;color:var(--muted);font-size:12px;font-family:"JetBrains 
   <div class="top">
     <div>
       <h1>兆鯨租客名單</h1>
-      <div class="sub">來源：<a href="../data/zhaojing/tenants.json" target="_blank" rel="noopener">tenants.json</a></div>
+      <div class="sub">來源：<a href="../data/zhaojing/tenants.json" >tenants.json</a></div>
     </div>
-    <div class="sub"><a href="../">← 回首頁</a> · <a href="./" target="_blank" rel="noopener">兆鯨子頁</a></div>
+    <div class="sub"><a href="../">← 回首頁</a> · <a href="./">兆鯨子頁</a></div>
   </div>
 
   <div class="card">
