--- a/zhaojing/property_ops.html
+++ b/zhaojing/property_ops.html
@@ -46,6 +46,8 @@ table{width:100%;border-collapse:collapse;min-width:1180px;background:var(--bg2)
 th,td{padding:10px 12px;border-bottom:1px solid var(--border);text-align:left;font-size:.92rem;vertical-align:top}
 th{font-size:.72rem;letter-spacing:.6px;text-transform:uppercase;color:var(--muted);font-family:var(--mono);background:rgba(255,255,255,.03)}
 tr:hover td{background:rgba(255,255,255,.04)}
+.td-tenant{white-space:nowrap}
+
 .small{font-size:.82rem;color:var(--muted)}
 .pill{display:inline-block;padding:1px 6px;border-radius:999px;border:1px solid var(--border);font-size:.68rem;color:var(--dim);white-space:nowrap}
 .pill.ok{border-color:#2A5030;color:var(--ok)}
@@ -82,9 +84,9 @@ footer{margin-top:12px;color:var(--muted);font-size:.78rem;font-family:var(--mon
   <div class="top">
     <div>
       <h1>兆鯨物業事件</h1>
-      <div class="sub">來源：<a href="../data/zhaojing/property_ops.json" target="_blank" rel="noopener">property_ops.json</a></div>
+      <div class="sub">來源：<a href="../data/zhaojing/property_ops.json" >property_ops.json</a></div>
     </div>
-    <div class="sub"><a href="../">← 回首頁</a> · <a href="./" target="_blank" rel="noopener">兆鯨子頁</a> · <a href="tenants.html" target="_blank" rel="noopener">租客名單</a></div>
+    <div class="sub"><a href="../">← 回首頁</a> · <a href="./">兆鯨子頁</a> · <a href="tenants.html">租客名單</a></div>
   </div>
 
   <div class="card">
