ui(zhaojing): align tenants header typography with property ops

--- a/zhaojing/tenants.html
+++ b/zhaojing/tenants.html
@@ -29,13 +29,14 @@
 body{margin:0;background:var(--bg);color:var(--text);font-family:"Noto Sans TC",sans-serif;line-height:1.5;-webkit-font-smoothing:antialiased}
 .wrap{max-width:1200px;margin:0 auto;padding:16px}
 .top{display:flex;justify-content:space-between;align-items:flex-end;gap:12px;flex-wrap:wrap;margin:8px 0 14px}
-h1{margin:0;font-size:22px}
-.sub{font-size:12px;color:var(--muted);font-family:"JetBrains Mono",monospace}
+h1{margin:0;font-size:1.25rem}
+.sub{font-size:.78rem;color:var(--muted);font-family:var(--mono)}
 a{color:var(--accent);text-decoration:none}
 a:hover{text-decoration:underline}
 .card{background:var(--panel);border:1px solid var(--border);border-radius:var(--radius);padding:12px 14px;margin:12px 0}
 .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
 .input{flex:1;min-width:220px}
+input,select,button{font:inherit}
 input,select{width:100%;padding:10px 10px;border-radius:10px;border:1px solid var(--border2);background:var(--bg3);color:var(--text);outline:none}
 .kpi{display:flex;gap:12px;flex-wrap:wrap}
 .badge{display:inline-block;border:1px solid var(--border);border-radius:999px;padding:4px 10px;font-size:12px;color:var(--muted)}
