--- a/zhaojing/tenants.html
+++ b/zhaojing/tenants.html
@@ -63,7 +63,7 @@ footer{margin-top:12px;color:var(--muted);font-size:12px;font-family:"JetBrains 
       <h1>兆鯨租客名單</h1>
       <div class="sub">來源：<a href="../data/zhaojing/tenants.json" >tenants.json</a></div>
     </div>
-    <div class="sub"><a href="../">← 回首頁</a> · <a href="./">兆鯨子頁</a></div>
+    <div class="sub"><a href="../">← 回首頁</a> · <a href="./">兆鯨子頁</a> · <a href="property_ops.html">物業事件</a></div>
   </div>
 
   <div class="card">
